--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -19,7 +19,7 @@
         <div id="Main">
             <div id="name"></div>
             <div id="description"></div>
-            <blockquote id="shoutout"></blockquote>
+            <blockquote><span id="shoutout"></span></blockquote>
         </div>
     </div>
 
