--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/views/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/views/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="/views/style.css">
+    <link rel="shortcut icon" href="/favicon.ico" />
     <script src="/assets/scripts/app.min.js"></script>
     <title>prime_weekend_challenge_03</title>
 </head>
