--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -16,6 +16,8 @@
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
+    <ol class="carousel-indicators"></ol>
+
     <div class="carousel-inner" role="listbox">
         <div id="Main">
             <div id="name"></div>
