--- a/server/public/views/style.css
+++ b/server/public/views/style.css
@@ -1,10 +1,12 @@
+#myCarousel { margin : 80px auto; width : 70%; }
+
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
     width: 80%;
     margin: auto;
 }
 
-#Main { width : 40%; height : 400px; margin : auto; padding : 40px; }
+#Main { width : 60%; height : 400px; margin : auto; padding : 40px; }
 
 #name { font-size : 26px; font-weight: bold; margin-bottom : 30px; border-bottom : 1px solid #000; width : 100%; }
 
@@ -18,6 +20,7 @@
     background-color : #FFE396;
     border-left : 0px !important;
     box-shadow : 0px 0px 20px #888;
+     position : relative;
 }
 blockquote:before, blockquote:after {
     font:bold 65px/1px Helvetica;
@@ -32,4 +35,33 @@ blockquote:before {
 blockquote:after {
     content:close-quote;
     margin:51px 0px 0px 0px;
+    right : -3px;
+}
+
+.carousel-indicators {
+    bottom : -50px !important;
+}
+
+.carousel-indicators li {
+    border: 1px solid #700;
+    margin : 5px !important;
+    box-shadow : 0px 0px 3px #444;
+}
+
+.carousel-indicators li:hover {
+     color : #000;
+ }
+.active {
+    margin: 5px !important;
+    background-color: #F00 !important;
+    box-shadow : 0px 0px 10px #000;
+}
+
+.carousel-control.left {
+    background-image: linear-gradient(to right,rgba(0,100,0,.5) 0,rgba(0,100,0,.0001) 100%) !important;
+    border-radius : 10px;
+}
+.carousel-control.right {
+    background-image: linear-gradient(to left,rgba(0,0,100,.5) 0,rgba(0,0,1000,.0001) 100%) !important;
+    border-radius : 10px;
 }
